# immunoorg

./: .gitignore  ACTION_PLAN.md  ANALYSIS_INDEX.txt  BLOG_POST.md  CLEANUP_REPORT.md  CODEBASE_ANALYSIS_REPORT.txt  DATASET_STRATEGY.md  DEMO_SUMMARY.md  Dockerfile  EVALUATION.md  FINAL_ENHANCEMENTS.md  FINAL_SUMMARY.md  HACKATHON_BLOG_POST.md  HF_SPACES_DEPLOYMENT_GUIDE.md  IMMUNOORG_2_0_IMPLEMENTATION.md  ImmunoOrg_Training_Colab.ipynb  JUDGES_60_SECONDS.md  JUDGING_GUIDE.md  MODULE_BREAKDOWN.txt  PITCH_STRATEGY.md  PRE_SUBMISSION_STATUS.md  PROBLEM_STATEMENT.md  PUBLISH_HACKATHON.md  QUICK_REFERENCE.txt  README.md  RESEARCH.md  SUBMISSION_CHECKLIST.md  SUBMIT_NOW.md  VIDEO_SCRIPT.md  WINNERS_PACKAGE.md  WIN_30MIN.md  benchmark_results.json  benchmark_suite.py  blog.md  cleanup.ps1  cleanup.sh  client.py  demo_playback.py  demo_results.json  demo_runner.py  (+14 more)
immunoorg/: __init__.py  api_models.py  attack_engine.py  belief_map.py  curriculum.py  devsecops_mesh.py  environment.py  executive_context.py  knowledge_base.py  llm_adversary.py  llm_client.py  migration_engine.py  mitre_ttp.py  mock_api_server.py  models.py  network_graph.py  org_dynamics.py  org_graph.py  permission_flow.py  reward.py  self_improvement.py  trained_agent.py  war_room.py
schemas/: world_state.json
scripts/: deploy_to_hf_space.py  generate_training_evidence.py  hf_space_smoke.py  make_hackathon_training_figure.py  plot_grpo_log_history.py  quick_hackathon_artifacts.py  verify_hackathon_submission.py
server/: config.py  demo_ui.py  main.py  war_room_debate.py  war_room_page.html  (+1 more)
(+39 files in other folders)
