[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immunoorg"
version = "1.0.0"
description = "ImmunoOrg: The Self-Healing Autonomous Enterprise — Dual-layer RL environment for cybersecurity + organizational dynamics"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "gradio>=4.20.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
training = [
    "trl>=1.0.0",
    "transformers>=4.45.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "torch>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["immunoorg*", "server*", "training*", "visualization*"]
